Imported from https://TiashaBY@github.com/TiashaBY/examples.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = examples
+[access "refs/*"]
+	owner = group user/TiashaBY
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/TiashaBY
+	label-Verified = -1..+1 group user/TiashaBY
+	push = group user/TiashaBY
+	read = group user/TiashaBY
+	rebase = group user/TiashaBY
+	removeReviewer = group user/TiashaBY
+	submit = group user/TiashaBY
+[access "refs/heads/*"]
+	create = group user/TiashaBY
+	push = +force group user/TiashaBY
+	pushMerge = group user/TiashaBY
+	read = group user/TiashaBY
+[access "refs/tags/*"]
+	push = group user/TiashaBY
+	push = +force group user/TiashaBY
