--- a/project.config
+++ b/project.config
@@ -4,20 +4,20 @@
 [project]
 	description = examples
 [access "refs/*"]
-	owner = group user/tbulavko (TiashaBY)
+	owner = group user/TiashaBY
 [access "refs/for/refs/*"]
-	label-Code-Review = -2..+2 group user/tbulavko (TiashaBY)
-	label-Verified = -1..+1 group user/tbulavko (TiashaBY)
-	push = group user/tbulavko (TiashaBY)
-	read = group user/tbulavko (TiashaBY)
-	rebase = group user/tbulavko (TiashaBY)
-	removeReviewer = group user/tbulavko (TiashaBY)
-	submit = group user/tbulavko (TiashaBY)
+	label-Code-Review = -2..+2 group user/TiashaBY
+	label-Verified = -1..+1 group user/TiashaBY
+	push = group user/TiashaBY
+	read = group user/TiashaBY
+	rebase = group user/TiashaBY
+	removeReviewer = group user/TiashaBY
+	submit = group user/TiashaBY
 [access "refs/heads/*"]
-	create = group user/tbulavko (TiashaBY)
-	push = +force group user/tbulavko (TiashaBY)
-	pushMerge = group user/tbulavko (TiashaBY)
-	read = group user/tbulavko (TiashaBY)
+	create = group user/TiashaBY
+	push = +force group user/TiashaBY
+	pushMerge = group user/TiashaBY
+	read = group user/TiashaBY
 [access "refs/tags/*"]
-	push = group user/tbulavko (TiashaBY)
-	push = +force group user/tbulavko (TiashaBY)
+	push = group user/TiashaBY
+	push = +force group user/TiashaBY
